header nav and hero updated

--- a/index.html
+++ b/index.html
@@ -4,10 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/Style.css">
     <title>Kaitlyn Smith</title>
 </head>
-
 <body>
+    <!--Navication Tags-->
+    <header>
+        <div>
+        <h1>
+            Kaitlyn Smith
+        </h1>
+        </div>
     
+        <nav>
+            <ul>
+                <Li>
+                    Projects
+                </Li>
+                <li>
+                    About Me
+                </li>
+                <li>
+                    Contact Info
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!--End Navigation-->
+    
+    <!--Hero/Jumbotron-->
+    <Section class="hero">
+        <div>
+            <h1>Kaitlyn Smith</h1>
+        </div>
+        <div>
+            <h2> . Discover . Create . Build .</h2>
+        </div>
+    </Section>
+    <!--End Hero/Jumbotron-->
+
+    <!--Projects-->
+    <section>
+        <article class="project-title">
+          <h2>
+            Projects
+         </h2>
+        </article>
+
+          <article>
+            <div>
+              <h3>Project 1 Title</h3>
+            </div>
+          </article>
+
+          <article>
+            <div>
+              <h3>Project 2 Title</h3>
+            </div>
+          </article>
+  
+          <article>
+            <div>
+              <h3>Project 3 Title</h3>
+            </div>
+          </article>
+      </section>
+
 </body>
 </html>
