--- a/index.html
+++ b/index.html
@@ -44,30 +44,46 @@
     <!--End Hero/Jumbotron-->
 
     <!--Projects-->
-    <section>
-        <article class="project-title">
+    <section class=project-display>
+        <article class="title">
           <h2>
             Projects
          </h2>
         </article>
 
-          <article>
+          <article class="project-list">
             <div>
               <h3>Project 1 Title</h3>
             </div>
           </article>
 
-          <article>
+          <article class="project-list text-right">
             <div>
               <h3>Project 2 Title</h3>
             </div>
           </article>
   
-          <article>
+          <article class="project-list">
             <div>
               <h3>Project 3 Title</h3>
             </div>
           </article>
+      </section>
+      <!--End Projects-->
+
+      <!--About Me-->
+      <section>
+        <div class="title"> 
+          <h2>
+            About Me
+          </h2>
+        </div>
+
+        <div class="about-me">
+          <p>
+            Hello! I am Kaitlyn. I live in south-east Idaho with my husband and two cats. We love to travel and explore new places. I'm a creative thinker and obsessive plant lover. I hit challenges head-on and love to discover new ways of living, dreaming, and manifesting. The world-wide web is ours for the taking!
+          </p>
+        </div>
       </section>
 
 </body>
