about me and contact info adds

--- a/index.html
+++ b/index.html
@@ -10,24 +10,21 @@
 <body>
     <!--Navication Tags-->
     <header>
-        <div>
         <h1>
-            Kaitlyn Smith
+          <a href="/">Kaitlyn Smith</a>
         </h1>
-        </div>
-    
-        <nav>
+          <nav>
             <ul>
-                <Li>
-                    Projects
-                </Li>
-                <li>
-                    About Me
-                </li>
-                <li>
-                    Contact Info
-                </li>
-            </ul>
+              <Li>
+                  <a href="#projects">Projects</a>
+              </Li>
+               <li>
+                  <a href="#about-me">About Me</a>
+              </li>
+              <li>
+                  <a href="#contact-info">Contact Info</a>
+              </li>
+          </ul>
         </nav>
     </header>
     <!--End Navigation-->
@@ -44,47 +41,73 @@
     <!--End Hero/Jumbotron-->
 
     <!--Projects-->
-    <section class=project-display>
+    <section id="projects" class=project-display>
         <article class="title">
           <h2>
             Projects
          </h2>
         </article>
 
-          <article class="project-list">
+          <article class="project-list one">
             <div>
-              <h3>Project 1 Title</h3>
+              <a href="https://krushtons.github.io/Horiseon/">Placeholder</a>
             </div>
           </article>
 
-          <article class="project-list text-right">
+          <article class="project-list two text-right">
             <div>
-              <h3>Project 2 Title</h3>
+              <h3>Project 2 Title Link Placeholder</h3> 
+
             </div>
           </article>
   
-          <article class="project-list">
+          <article class="project-list three">
             <div>
-              <h3>Project 3 Title</h3>
+              <h3>Project 3 Title Link Placeholder</h3>
             </div>
           </article>
       </section>
       <!--End Projects-->
 
       <!--About Me-->
-      <section>
+      <section id="about-me">
         <div class="title"> 
           <h2>
             About Me
           </h2>
         </div>
 
-        <div class="about-me">
+        <div class="info-display">
+          <img src="./assets/images/about-me.jpg">
           <p>
             Hello! I am Kaitlyn. I live in south-east Idaho with my husband and two cats. We love to travel and explore new places. I'm a creative thinker and obsessive plant lover. I hit challenges head-on and love to discover new ways of living, dreaming, and manifesting. The world-wide web is ours for the taking!
           </p>
         </div>
       </section>
+<!--End About Me -->
 
+<!--Contact ME -->
+      <section id="contact-info">
+        <div class="title">
+          Contact Info:
+        </div>
+        <div class="contact-info">
+          <ul>
+            <li>
+              Phone Number: 123.456.7890
+            </li>
+            <li>
+              Email: kaitierush21@gmail.com
+            </li>
+            <LI>
+              <a href="https://github.com/Krushtons">GitHub
+            </LI>
+            <li>
+              <a href="https://www.linkedin.com/feed/">LinkedIn
+            </li>
+          </ul>
+        </div>
+      </section>
+<!--End Contact Info-->
 </body>
 </html>
