media screen adjustments

--- a/index.html
+++ b/index.html
@@ -99,15 +99,22 @@
             <li>
               Email: kaitierush21@gmail.com
             </li>
-            <LI>
-              <a href="https://github.com/Krushtons">GitHub
-            </LI>
+            <Li>
+              <a href="https://github.com/Krushtons">GitHub</a>
+            </Li>
             <li>
-              <a href="https://www.linkedin.com/feed/">LinkedIn
+              <a href="https://www.linkedin.com/feed/">LinkedIn</a>
             </li>
           </ul>
         </div>
       </section>
 <!--End Contact Info-->
-</body>
+
+  <!-- Footer -->
+  <footer>
+    <h3>❤️ Made with love by Kaitlyn.</h3>
+  </footer>
+  <!-- End Footer -->
+
+  </body>
 </html>
